# t2t-research

./: .gitignore  LICENSE  README.md  prior_figures  prior_results  pyproject.toml
config/: api_config.yaml
data/processed/: heart_processed.csv
manuscript/: manuscript.md
prompts/: extraction_prompt.txt  generation_prompt.txt
results/comparison/: ece_summary.csv  importance_vs_error.csv  noise_resilience.csv  significance_tests.csv
results/deepseek/: calibration_data.csv  experiment_results.csv  extraction_accuracy.csv
results/qwen2b/: calibration_data.csv  experiment_results.csv  extraction_accuracy.csv
src/: advanced_analysis.py  analyze_extraction.py  extract_structured.py  generate_notes.py  noise_injection.py  prepare_data.py  train_evaluate.py
