[project]
name = "t2t-research"
version = "0.1.0"
description = "T2T: LLM extraction error propagation in hybrid clinical prediction pipeline"
authors = [
    {name = "Zhanbingli", email = "zhanbing2025@gmail.com"}
]
license = {text = "MIT"}
keywords = ["medical", "automl", "transformer", "cardiovascular", "diagnosis", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "kagglehub>=1.0.0",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "pytorch-tabnet>=4.1.0",
    "requests>=2.32.0",
    "rustbpe>=0.1.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.10.0",
    "seaborn>=0.13.2",
    "tiktoken>=0.11.0",
    "torch==2.6.0",
    "xgboost>=3.2.0",
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "tenacity>=8.0.0",
    "aiohttp>=3.9.0",
]


